--- a/src/App.css
+++ b/src/App.css
@@ -37,10 +37,56 @@
   }
 }
 
+
+.nombre_tabla{
+  display:flex;
+  margin-left:100px;
+  width:max-content;
+  
+}
+
+
+.box_raza{
+  margin-left: 100px;
+  width:auto;
+  
+}
+
+.box_nivel{
+  margin-left: 100px;
+  width: fit-content;
+
+}
+
+.box_ability_score{
+  width: fit-content;
+  margin-left: 50px;
+
+
+}
+.box_ability_modifier{
+  margin-left: 20px;
+  display:inline;
+
+}
+
+.parent_portrait{
+  width: auto;
+  height: 70px;
+  display: flex;
+  background: black;
+  background-color: black;
+  font-size: 50px;
+  font-family: Papyrus,fantasy;
+  color: white;
+}
+
 .centered_parent{
   text-align: center;
   width: 50%;
-  margin:auto
+  margin:auto;
+  background: transparent;
+  
 }
 
 .box_caracteristicas{
@@ -54,7 +100,7 @@
   padding-bottom: 10px;
   padding-left: 5px;
   margin: 10px;
-  width: 700px;
+  width: 800px;
   border: solid black;
   display: flex;
   justify-content: space-between;
@@ -68,10 +114,25 @@
   width: 50px;
 }
 .stat_name{
-  width: 50px;
+  width: 70px;
 }
 
 .caracteritstica_total{
   display: flex;
   justify-content: space-between;
+}
+
+.box_modificador{
+  padding-left: 10px;
+  margin: 3px;
+}
+
+.box_puntosDisponibles{
+  width: 40px;
+}
+
+.imagen_backgorund{
+  background-image: url(/src/images/canvas.png);
+  width: 1000px;
+
 }
