--- a/src/styles/title.module.css
+++ b/src/styles/title.module.css
@@ -1,10 +1,23 @@
+@keyframes background-pan {
+  from{
+    background-position:0% center;
+  }
+  to{
+    background-position: -200% center;
+  }
+}
+
 .title_container{
     width: auto;
     height: auto;
     display: flex;
-    background: black;
-    background-color: black;
     font-size: 2vw;
     font-family: Papyrus,fantasy;
     color: white;
+    background-color: black;
   }
+
+
+
+
+
