--- a/src/styles/table.module.css
+++ b/src/styles/table.module.css
@@ -50,6 +50,13 @@
   margin-left: 10px;
 }
 
+.button_container{
+    width: 50%;
+    justify-content: center;
+    margin-left: 15%;
+    margin-top: 5%;
+}
+
 .table_format{
     border-spacing: 10px 0;
     border-collapse: collapse;
