--- a/src/styles/settings.module.css
+++ b/src/styles/settings.module.css
@@ -14,7 +14,7 @@
     font-style: italic;
     font-size: 24px;
     font-weight: bold;
-    margin-left: 10px;
+    margin:10px;
     background-color: transparent;
   }
   
@@ -37,8 +37,9 @@
   .button_container{
       width: 50%;
       justify-content: center;
-      margin-left: 15%;
-      margin-top: 5%;
+      margin-left: 20%;
+      margin-top: 10%;
+      border: solid black;
   }
 
 
@@ -65,13 +66,17 @@
   justify-content: center;
   text-align: left;
   padding: 10px;
-
 }
 
 .modal_table{
   text-align: center;
   border-spacing: 10px;
+  width: min-content;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+
 }
+
 
 .close_modal {
   position: absolute;
@@ -89,10 +94,9 @@
   border:0;
   cursor: pointer;
   text-decoration: none;
-  position: relative;
   color: #000;
   background: #fff;
-  line-height: 30px;
+  line-height: 1vw;
   border-radius: 40px;
   padding: 20px;
   font-size: 30px;
@@ -100,8 +104,4 @@
   box-shadow: rgb(255, 198, 0) -2px -2px 0px 2px, rgb(246, 84, 174) 0px 0px 0px 4px, rgba(0, 0, 0, 0.05) 0px 0px 2px 7px;
   transition: all 0.2s;
   
-}
-.preview_button:hover{
-    box-shadow: rgb(246, 84, 174) -2px -2px 0px 2px, rgb(255, 198, 0) 0px 0px 0px 4px, rgba(0, 0, 0, 0.05) 0px 0px 2px 7px;
-    transform: scale(1.01);
 }
