--- a/src/styles/table.module.css
+++ b/src/styles/table.module.css
@@ -1,7 +1,7 @@
 
 .body_container{
     text-align: center;
-    width: 100%;
+    width: 100vw;
     height:auto;
     position: center;
     margin:0 auto;
