--- a/src/styles/row.module.css
+++ b/src/styles/row.module.css
@@ -2,13 +2,12 @@
     text-align: left;
   }
 
-.caracteristica_input{
-    padding-left: 5px;
-    padding-right: 5px;
-    width: 50px;
-}
 
 .box_modificador{
     padding-left: 10px;
     margin: 3px;
+}
+
+.inputBar{
+    width: 5vw;
 }
